# WinProcessGuard

./: .gitignore  ProcessGuardClient.cpp  ProcessGuardClient.hpp  README.md
docs/superpowers/plans/: 2026-04-21-config-backup-fallback.md
docs/superpowers/specs/: 2026-04-21-config-backup-fallback-design.md
process-guard-service/: Cargo.toml
process-guard-service/src/: config.rs  guardian.rs  main.rs  models.rs  pipe_server.rs  service.rs  session0.rs
