[package]
name = "process-guard-service"
version = "0.1.0"
edition = "2021"
description = "Windows service for process guarding with Session 0 GUI support"
authors = ["ProcessGuard"]

[dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
simplelog = "0.12"

[profile.release]
opt-level = 3
lto = true
